css/styles.css
/* ---------------- Fonts ---------------- */

@import url('https://fonts.googleapis.com/icon?family=Material+Icons');

@font-face {
    font-family: "Helvetica";
    src:url("../fonts/helvetica.ttc");
}

body {
    background-color: #F9F9F9;
    overflow-x: hidden;
    overflow-y: hidden;
}

h1 {
    font-family: 'Helvetica', sans-serif;
    color: #DA2128;
    font-weight: bold;
    position: relative;
    text-align: left;
    font-size: 24px;
}

p {
    font-family: 'Helvetica', sans-serif;
    color: #1C1E20;
    font-weight: 100;
    position: relative;
    text-align: left;
    font-size: 18px;
    line-height: 32px;
}

/* ---------------- Titles & Text ---------------- */

.person-name {
    font-family: 'Helvetica', sans-serif;
    color: #ffffff;
    font-size: 22px;
    position: relative;
    bottom: 25px;
}

.about-paragraph, .about-title {
 left: 20px;
 max-width: 650px;
}

.small-icon {
color: #ffffff;
font-size: 25px;
position: relative;
right: 100px;
top: 2px;
}

/* ---------------- Containers ---------------- */

#top-navigation-flex-container {
    position: relative;
    height: 256px;
    display: flex;
    width: 100vw; 
    top: -8px; 
    left: -8px; 
    background-color: rgba(218,33,40,100);
    -webkit-box-flex-direction: row;
    -moz-box-flex-direction: row;
    -webkit-flex-direction: row;
    flex-direction: row;
}

#navigation-buttons-container {
    margin: auto;
    height: 16px;
    text-align: center;
    position: relative;
    bottom: 90px;
    left: 220px;
}

#profile-buttons-container {
    margin: auto;
    height: 16px;
    text-align: center;
    position: relative;
    bottom: 200px;
}

#profile-container {
    position: relative;
    left: 100px;
    margin: auto;
    height:16px;
    text-align: center;
    bottom: 70px;
    left: -550px;
}

#card-container {
    background-color: #ffffff;
    position: relative;
    margin: auto;
    text-align: center;
    height: 320px;
    width: 696px;
    bottom: 150px;
    left: 180px;
    border-radius: 15px;
    transform: scale(0.8);
}

/* ---------------- Buttons ---------------- */

.navigation-button {
    font-family: 'Helvetica', sans-serif;
    color: #ffffff;
    background-color: transparent;
    border-color: transparent;
    border-radius: 20px;
    font-size: 22px;
}

.profile-button {
    position: relative;
    height: 45px;
    width: auto;
    border-radius: 20px;
    font-size: 20px;
    background-color: transparent;
    color: #1C1E20;
    border-color: #E5E5E5;
    border-style: solid;
    border-width: 1px;
    text-align: center;
    margin-left: 10px; 
}

/* ---------------- Buttons on hover ---------------- */

.profile-button:hover, .navigation-button:hover {
    color: #ffffff;
    background-color: #1C1E20;
}

/* ---------------- Images ---------------- */

.profile-picture {
    position: relative;
    bottom: 230px;
    right: 520px;
    width: 296px;
    height: 240px;  
    border-radius: 10px;
}

